# scalesocket

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
assets/: cli.md
docs/: README.md  doctave.yaml  navigation.yaml  structure.yaml
docs/_assets/: landing.css  style.css
docs/_partials/: window.md
docs/man/: advanced_usage.md  cli.md  comparison.md  features.md  installation.md  navigation.yaml  usage.md
docs/man/examples/: chat.md  multiplayer.md  terminal.md
examples/: docker-compose.yml
examples/chat/: Dockerfile  index.html
examples/collaborative/: Dockerfile  index.html  index.ts  package-lock.json  package.json  utils.js
examples/multiplayer/: Dockerfile  client.js  game.js  game.py  index.html  server.py
examples/terminal/: Dockerfile  index.html
examples/whiteboard/: Dockerfile  frontend.js  index.html  server.ts  tsconfig.json
src/: channel.rs  cli.rs  connection.rs  envvars.rs  error.rs  events.rs  logging.rs  main.rs  message.rs  metrics.rs  process.rs  routes.rs  signal.rs  types.rs  utils.rs
tests/: cli_tests.rs
