[package]
name = "scalesocket"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"

description = "A websocket server and autoscaler"
homepage = "https://scalesocket.org/"
repository = "https://github.com/scalesocket/scalesocket/"
keywords = ["websockets", "gamedev", "server"]
exclude = [".github/", ".tool-versions", "Dockerfile", "docs/", "examples/"]

[dependencies]
bytes = "1.4.0"
clap = { version = "4.3.21", features = ["derive"] }
futures = "0.3.28"
id-pool = { version = "0.2.2", default-features = false, features = ["u16"] }
num-traits = "0.2"
num-derive = "0.4"
prometheus-client = "0.21.0"
sender-sink = "0.2.1"
serde = "1.0.192"
serde_json = "1.0.93"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
trycmd = "0.14"
tokio = { version = "1.31", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }
urlencoding = "2.1"
warp = "0.3.5"
