[package]
name = "scalesocket"
version = "0.2.4"
edition = "2024"
license = "Apache-2.0"

categories = ["command-line-utilities", "web-programming"]
description = "A collaborative websocket server and autoscaler"
homepage = "https://scalesocket.org/"
repository = "https://github.com/scalesocket/scalesocket/"
keywords = ["websockets", "gamedev", "server"]
exclude = [".github/", ".tool-versions", "Dockerfile", "docs/", "examples/", "rustfmt.toml", "tests/cli_tests.rs"]

[dependencies]
bytes = "1.11.0"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
heapless = "0.9.2"
id-pool = { version = "0.2.2", default-features = false, features = ["u16"] }
num-traits = "0.2"
num-derive = "0.4"
prometheus-client = "0.24.0"
sender-sink = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
tokio = { version = "1.49", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.18", features = ["sync", "net", "io-util"] }
tokio-util = { version = "0.7.18", features = ["io"] }
urlencoding = "2.1"
warp = "0.3.7"

[dev-dependencies]
trycmd = "0.15"
